# mujoco_map_maker

./: README.md  TODO.md  changelog.md  pyproject.toml
mujoco_mm/: __init__.py  map_maker.py
mujoco_mm/assets/: desk.stl
mujoco_mm/assets/objects/: bottle.xml
mujoco_mm/core/: utils.py
mujoco_mm/entities/: __init__.py  body.py  box.py  capsule.py  cube.py  cylinder.py  mesh.py  sphere.py
mujoco_mm/use_cases/: __init__.py  element_manager.py
tests/: map_maker_test.py
tests/assets/: obstacles.xml  scene.xml
